cmake_minimum_required(VERSION 3.14)
project(Portafolio-2)

set(CMAKE_C_STANDARD 99)

add_executable(Ejercicio-1 Ejercicio-1/main.c Ejercicio-1/Funciones.c Ejercicio-1/Funciones.h)
add_executable(Ejercicio-2 Ejercicio-2/main.c Ejercicio-2/Funciones.c Ejercicio-2/Funciones.h)
add_executable(Ejercicio-3 Ejercicio-3/main.c Ejercicio-3/Funciones.c Ejercicio-3/Funciones.h)
add_executable(Ejercicio-4 Ejercicio-4/main.c Ejercicio-4/Funciones.c Ejercicio-4/Funciones.h)
add_executable(Ejercicio-5 Ejercicio-5/main.c Ejercicio-5/Funciones.c Ejercicio-5/Funciones.h)
add_executable(Ejercicio-6 Ejercicio-6/main.c Ejercicio-6/Funciones.c Ejercicio-6/Funciones.h)
add_executable(Ejercicio-7 Ejercicio-7/main.c Ejercicio-7/Funciones.c Ejercicio-7/Funciones.h)
add_executable(Ejercicio-8 Ejercicio-8/main.c Ejercicio-8/Funciones.c Ejercicio-8/Funciones.h)
add_executable(Ejercicio-9 Ejercicio-9/main.c Ejercicio-9/Funciones.c Ejercicio-9/Funciones.h)
add_executable(Ejercicios-10 Ejercicios-10/main.c Ejercicios-10/Funciones.c Ejercicios-10/Funciones.h)

add_executable(Ejercicios-11 Ejercicio-11/main.c Ejercicio-11/Funciones.c Ejercicio-11/Funciones.h)
add_executable(Ejercicio-12 Ejercicio-12/main.c Ejercicio-12/Funciones.c Ejercicio-12/Funciones.h)
